<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="134dp"
        android:layout_height="32dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="332dp"
        android:elevation="3dp"
        android:text="@string/Third_animal_description"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="134dp"
        android:layout_height="32dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="240dp"
        android:elevation="3dp"
        android:text="@string/Second_animal_description"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="134dp"
        android:layout_height="32dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="138dp"
        android:elevation="3dp"
        android:text="@string/First_animal_description"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="300dp"
        android:elevation="3dp"
        android:text="@string/Third_animal"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="108dp"
        android:elevation="3dp"
        android:text="@string/First_animal"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="208dp"
        android:elevation="3dp"
        android:text="@string/Second_animal"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="289dp"
        android:backgroundTint="#9FC3E3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="#9FC3E3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/hello_animal"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#9FC3E3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="243dp"
        android:layout_marginTop="107dp"
        android:text="@string/button_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="243dp"
        android:layout_marginTop="206dp"
        android:text="@string/button_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="243dp"
        android:layout_marginTop="300dp"
        android:text="@string/button_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:elevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:elevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="293dp"
        android:elevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/humster" />

</androidx.constraintlayout.widget.ConstraintLayout>